# DexterIK

./: README.md
catkin_ws/src/dexter/: CMakeLists.txt  package.xml
catkin_ws/src/dexter/include/: Dexter.h
catkin_ws/src/dexter/launch/: viz.launch
catkin_ws/src/dexter/src/: Dexter.cpp  Dexter.h  button_press.cpp  demo.cpp  dexter_control.cpp  dexter_control.h  test_dexter.cpp
catkin_ws/src/dexter/urdf/: kp0005-01_botbasestatorbracket.stl  kp0013-01_mainpivotv2.stl  kp0028-01_armbodybottom.stl  kp0047-01_axisintersectionhalfsm.stl  kp0048-01_axisintersectionhalfsm_b.stl  kp0053-01_compositebarshoulder.stl  kp0066-01_endarmhubbottom.stl  kp0069-01_forarmbeam.stl  kp0070-01_endaxishubc.stl  kp0079-01_diffa2codediskendstopfilled.stl  kp0086-01_outterfrontdifferentialgear.stl  kp0093-01_toolinterface.stl  robot.rviz  robot.urdf
catkin_ws/src/test_ik/: CMakeLists.txt  CMakeLists_backup.txt  package.xml
catkin_ws/src/test_ik/launch/: test_ik.launch
catkin_ws/src/test_ik/src/: test_ik_do_thing.cpp
